# handler/user/user.go
@@ -33,3 +33,7 @@ type LoginRequest struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
+
+type LoginResponse struct {
+	Token string `json:"token"`
+}
